--- a/pda/package.json
+++ b/pda/package.json
@@ -38,6 +38,7 @@
     "css-loader": "^0.28.9",
     "eslint-loader": "^1.9.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "html-webpack-plugin": "^3.0.6",
     "koa-pug": "^3.0.0-2",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
