--- a/admin/package.json
+++ b/admin/package.json
@@ -5,7 +5,7 @@
   "main": "yufei.xue",
   "scripts": {
     "dev": "webpack-dev-server --port 8089 --open --watch --color",
-    "build": "webpack --watch",
+    "build": "webpack",
     "test": "npm run start"
   },
   "keywords": [
